@@ -2,6 +2,9 @@ package com.socialuni.social.tance.entity;
 
 import com.socialuni.social.common.api.enumeration.SocialuniCommonStatus;
 import com.socialuni.social.common.api.utils.UUIDUtil;
+import com.socialuni.social.common.sdk.constant.SocialuniSysRoleId;
+import com.socialuni.social.common.sdk.dao.repository.SocialuniUserRepository;
+import com.socialuni.social.tance.model.DO.DevAccountDo;
 import com.socialuni.social.tance.sdk.api.DevAccountInterface;
 import com.socialuni.social.tance.sdk.api.DevAccountRedisInterface;
 import com.socialuni.social.tance.sdk.constant.AdminAppConfigConst;
@@ -9,10 +12,11 @@ import com.socialuni.social.tance.sdk.enumeration.DevAccountType;
 import com.socialuni.social.tance.sdk.enumeration.GenderType;
 import com.socialuni.social.tance.sdk.model.DevAccountModel;
 import com.socialuni.social.user.sdk.logic.entity.SocialUserPhoneEntity;
-import com.socialuni.social.user.sdk.model.DO.SocialUserPhoneDo;
+import com.socialuni.social.user.sdk.dao.DO.SocialUserPhoneDo;
 import com.socialuni.social.common.sdk.dao.DO.SocialuniUserDo;
 import com.socialuni.social.user.sdk.logic.redis.SocialUserPhoneRedis;
 import com.socialuni.social.user.sdk.utils.SocialuniUserUtil;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import javax.annotation.Resource;
@@ -24,6 +28,7 @@ import java.util.Optional;
  * @date 2019-06-25 19:59
  */
 @Service
+@Slf4j
 public class DevAccountEntity {
     @Resource
     private DevAccountInterface devAccountApi;
@@ -31,7 +36,8 @@ public class DevAccountEntity {
     private DevAccountRedisInterface devAccountRedis;
     @Resource
     private SocialUserPhoneRedis socialUserPhoneRedis;
-
+    @Resource
+    SocialuniUserRepository socialuniUserRepository;
     @Resource
     SocialUserPhoneEntity socialUserPhoneEntity;
 
@@ -46,7 +52,7 @@ public class DevAccountEntity {
         Long curDevNum;
         if (devAccountDOOptional.isPresent()) {
             Long lastDevId = devAccountDOOptional.get().getDevNum();
-            curDevNum = lastDevId +  Double.valueOf((Math.random() * 20)).longValue();
+            curDevNum = lastDevId + new Double((Math.random() * 20)).longValue();
         } else {
             curDevNum = AdminAppConfigConst.qingChiDevNum;
         }
@@ -73,13 +79,16 @@ public class DevAccountEntity {
         SocialuniUserDo socialuniUserDo;
         if (SocialUserPhoneDo == null) {
             //如果没注册账号，则直接注册
-            socialuniUserDo = socialUserPhoneEntity.createUserPhoneEntity(phoneNum);
+            socialuniUserDo = socialUserPhoneEntity.createSysUserPhoneEntity(phoneNum);
         } else {
             socialuniUserDo = SocialuniUserUtil.getAndCheckUserNotNull(SocialUserPhoneDo.getUserId());
+            socialuniUserDo.setRoleId(SocialuniSysRoleId.sys);
+            socialuniUserDo = socialuniUserRepository.save(socialuniUserDo);
         }
         devAccountModel.setUserId(socialuniUserDo.getUserId());
         devAccountModel = (DevAccountDo) devAccountRedis.saveDevAccount(devAccountModel);
 
+        log.info("创建开发者账号成功，devNum:{},phoneNum:{}", curDevNum, phoneNum);
         //创建话题，还要创建用户
        /* TagDO tagDO = SocialTagDOFactory.toTagDO(curDevNum.toString(), "开发者对应的话题", SocialAppConfig.getSystemUserId());
         tagDO = tagRepository.save(tagDO);
